<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.detailGame.DetailGameActivity">

        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:visibility="gone"
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_duration="300">

            <include layout="@layout/placeholder_game_detail" />
        </com.facebook.shimmer.ShimmerFrameLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_thumb"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_dummy_game"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_230sdp"/>

                <LinearLayout
                    android:padding="@dimen/_15sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_developers"
                        android:textColor="@color/abu_pekat"
                        style="@style/title10"
                        android:text="@string/teks_dummy_developers"/>

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        style="@style/title14"
                        android:text="@string/teks_dummy_title_game"/>

                    <TextView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:id="@+id/tv_release_date"
                        android:textColor="@color/abu_pekat"
                        style="@style/title10"
                        android:text="@string/teks_dummy_release_date"/>

                    <LinearLayout
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!--rating game-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:padding="@dimen/_3sdp"
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:src="@drawable/ic_star"/>

                            <TextView
                                android:layout_gravity="center"
                                android:id="@+id/tv_rating"
                                android:textColor="@color/abu_pekat"
                                android:text="@string/teks_4_5"
                                style="@style/body10"/>
                        </LinearLayout>

                        <!--player game-->
                        <LinearLayout
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:padding="@dimen/_3sdp"
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_15sdp"
                                android:src="@drawable/ic_star"/>

                            <TextView
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:id="@+id/tv_player"
                                android:textColor="@color/abu_pekat"
                                android:text="@string/teks_dummy_player"
                                style="@style/body10"/>
                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:text="@string/teks_lorem_ipsum"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:id="@+id/tv_description"
                        style="@style/body12"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>